--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,7 @@
             <div class="container">
                 {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu">
-                    {% include './icons/file-earmark-plus.svg' %}
+                    {% include './icons/plus-square.svg' %}
                 </a>
                 {% endif %}
                 <h1><a href="/">Django Blog</a></h1>
