--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,6 +13,10 @@
                 <a href="{% url 'post_new' %}" class="top-menu">
                     {% include './icons/plus-square.svg' %}
                 </a>
+
+                <a href="{% url 'post_draft_list' %}" class="top-menu">
+                    {% include './icons/pencil-square.svg' %}
+                </a>
                 {% endif %}
                 <h1><a href="/">Django Blog</a></h1>
             </div>
