--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,14 +7,21 @@
             <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
               {% include './icons/pencil-fill.svg' %}
             </a>
+            <a class="btn btn-secondary" href="{% url 'post_remove' pk=post.pk %}">
+                {% include './icons/trash.svg' %}
+            </a>
         {% endif %}
         </aside>
         {% if post.published_date %}
             <time class="date">
                 {{ post.published_date }}
             </time>
+        {% else %}
+            <aside class="actions">
+                <a class="btn btn-secondary" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+            </aside>
+        {% endif %}
             <h2>{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
-        {% endif %}
     </article>
 {% endblock %}
