--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -24,4 +24,30 @@
             <h2>{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
     </article>
+
+    <hr>
+    {% for comment in post.comments.all %}
+    {% if user.is_authenticated or comment.approved_comment %}
+    <div class="comment">
+        <div class="date">{{ comment.created_date }}
+            {% if not comment.approved_comment %}
+            <a class="btn btn-secondary" href="{% url 'comment_remove' pk=comment.pk %}">
+                {% include './icons/trash.svg' %}
+            </a>
+            <a class="btn btn-secondary" href="{% url 'comment_approve' pk=comment.pk %}">
+                {% include './icons/check-square.svg' %}
+            </a>
+            {% endif %}
+        </div>
+        <strong>{{ comment.author }}</strong>
+        <p>{{ comment.text|linebreaks }}</p>
+    </div>
+    {% endif %}
+
+    {% empty %}
+        <p>No comments here yet :(</p>
+    {% endfor %}
+
+    <a class="btn btn-secondary" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+
 {% endblock %}
